--- a/Code Project/DuLichDoDay/app/src/main/res/layout/activity_main.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TrangChuActivity">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Trang chu"/>
+    tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!" />
+
 </LinearLayout>
