Update values color
Update values color

--- a/Code Project/DuLichDoDay/app/src/main/res/values/colors.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="color_main">#64be97</color>
     <color name="btn_login">#435154</color>
     <color name="color_user">#f41b3f</color>
+    <color name="color_backGroundLogin">#64be97</color>
     <color name="txt">#e9e8e8</color>
 
     <color name="bg_main_x">#d1d1d1</color>
