--- a/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_tour.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.group6.dulichdoday.TourFragment">
 
     <LinearLayout
@@ -62,19 +61,24 @@
             android:layout_weight="11"
             android:orientation="vertical">
 
-            <!-- TODO: Update blank fragment layout -->
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabLayoutPlace"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabIndicatorColor="@color/colorPrimary"
-                app:tabSelectedTextColor="@color/colorPrimary"
-                app:tabMode="fixed"></android.support.design.widget.TabLayout>
+                android:layout_height="40dp"
+                android:gravity="center|right">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewPagerPlace"
+                <Spinner
+                    android:id="@+id/spinnerTour"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"></Spinner>
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerViewTour"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
 
         </LinearLayout>
 
