--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
@@ -19,12 +19,13 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3">
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <ImageView
                     android:id="@+id/img_tour"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"/>
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"/>
 
             </LinearLayout>
 
@@ -40,6 +41,9 @@
                     android:id="@+id/tv_code_tour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textColor="@color/color_main"
+                    android:drawableLeft="@drawable/ic_star"
                     android:text="Mã tour : 1"/>
 
                 <TextView
@@ -52,73 +56,20 @@
 
                 <TextView
                     android:id="@+id/tv_discip_tour"
+                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3 Ngày 2 Đêm"/>
 
                 <TextView
                     android:id="@+id/tv_price_tour"
+                    android:drawableLeft="@drawable/money"
+                    android:drawablePadding="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:textColor="@android:color/holo_red_dark"
                     android:text="560.000 đ"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        style="@style/customhome_product_widget">
-
-                        <CheckBox
-                            android:id="@+id/cbx_like"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@drawable/cbx_like"/>
-                        <TextView
-                            android:id="@+id/tv_number_like"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        style="@style/customhome_product_widget">
-
-                        <CheckBox
-                            android:id="@+id/cbx_unlike"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@drawable/cbx_unlike"/>
-                        <TextView
-                            android:id="@+id/tv_number_unlike"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        style="@style/customhome_product_widget">
-
-                        <ImageView
-                            android:id="@+id/cbx_comment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_chat"/>
-                        <TextView
-                            android:id="@+id/tv_number_comment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"/>
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
 
             </LinearLayout>
 
