up danh sach tour hang DL

--- a/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_user_business.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_user_business.xml
@@ -54,7 +54,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/linear_personal"
+                    android:id="@+id/linear_business"
                     style="@style/choosen_user">
 
                     <ImageView
