--- a/Code Project/DuLichDoDay/app/src/main/res/layout/detail_business_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/detail_business_layout.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.group6.dulichdoday.DetailBusinessActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -239,5 +238,4 @@
         </LinearLayout>
 
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
