--- a/Code Project/DuLichDoDay/app/src/main/res/layout/login_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/login_layout.xml
@@ -22,11 +22,13 @@
             android:src="@drawable/travel"/>
 
         <EditText
+            android:id="@+id/edtMailLogin"
             android:drawableLeft="@drawable/ic_text_email"
             android:hint="@string/edt_mail"
             style="@style/Edittext"/>
 
         <EditText
+            android:id="@+id/edtPassLogin"
             android:drawableLeft="@drawable/ic_text_pass"
             android:hint="@string/edt_pass"
             android:inputType="textPassword"
@@ -53,16 +55,11 @@
         android:gravity="center">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chưa có tài khoản? "
-            android:textColor="@android:color/white"/>
-        <TextView
             android:id="@+id/tv_Register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Đăng ký"
-            android:textColor="@android:color/holo_blue_light"/>
+            android:text="Chưa có tài khoản"
+            android:textColor="@android:color/white"/>
 
     </LinearLayout>
 </LinearLayout>
