--- a/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
@@ -187,10 +187,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
-                            android:textColor="@android:color/black"
+                            android:layout_marginTop="20dp"
                             android:text="- Ngày 1:
 0h: xuất phát từ  TPHCM
 6h check phong + ăn uống
@@ -200,7 +199,8 @@
 14h: tham quan Viện Hải Dương Học + Nhà Thờ Đá + chùa Long Sơn + thác YangBay
 18h:ăn uống tại Khách Sạn
 19h: tham quan chợ Đêm Nha Trang
-"/>
+"
+                            android:textColor="@android:color/black" />
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
