--- a/Code Project/DuLichDoDay/app/src/main/res/layout/manager_booking_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/manager_booking_tour_layout.xml
@@ -32,24 +32,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Danh sách tour"
+                android:text="Tour Khách Đặt"
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
                 android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center|right">
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/ic_sort" />
 
         </LinearLayout>
 
@@ -60,18 +46,6 @@
         android:layout_height="0dp"
         android:layout_weight="11"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:gravity="center|right">
-
-            <Spinner
-                android:id="@+id/spinnerTour"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></Spinner>
-
-        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewTour"
