--- a/Code Project/DuLichDoDay/app/src/main/res/layout/book_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/book_tour.xml
@@ -33,7 +33,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Danh sách tour "
+                    android:text="Danh sách Tour Đặt"
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
