--- a/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
@@ -75,9 +75,9 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/imgDetail"
                             android:layout_width="150dp"
-                            android:layout_height="150dp"
-                            android:src="@mipmap/img_nhatrang"/>
+                            android:layout_height="150dp"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -87,82 +87,37 @@
                             android:paddingLeft="10dp">
 
                             <TextView
+                                android:id="@+id/tvCodeDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@android:color/black"
                                 android:textSize="18dp"
                                 android:textStyle="bold"
-                                android:text="TPHCM - Nha Trang"/>
+                                android:text="01"/>
 
                             <TextView
+                                android:id="@+id/tvAddDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@android:color/black"
-                                android:textSize="18dp"
-                                android:text="2 ngày 1 đêm"/>
+                                android:textSize="22dp"
+                                android:text="sdasdas"/>
 
                             <TextView
+                                android:id="@+id/tvDesciption"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@android:color/black"
+                                android:textSize="14dp"
+                                android:text="sdasdas"/>
+
+                            <TextView
+                                android:id="@+id/tvPriceDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@android:color/holo_red_dark"
-                                android:textSize="18dp"
-                                android:text="2.560.000 đ"/>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal">
-
-                                <LinearLayout
-                                    style="@style/customhome_product_widget">
-
-                                    <CheckBox
-                                        android:id="@+id/cbx_like"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:button="@drawable/cbx_like"/>
-                                    <TextView
-                                        android:id="@+id/tv_number_like"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="39"
-                                        android:layout_marginLeft="10dp"/>
-
-                                </LinearLayout>
-
-                                <LinearLayout
-                                    style="@style/customhome_product_widget">
-
-                                    <CheckBox
-                                        android:id="@+id/cbx_unlike"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:button="@drawable/cbx_unlike"/>
-                                    <TextView
-                                        android:id="@+id/tv_number_unlike"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="40"
-                                        android:layout_marginLeft="10dp"/>
-                                </LinearLayout>
-
-                                <LinearLayout
-                                    style="@style/customhome_product_widget">
-
-                                    <ImageView
-                                        android:id="@+id/cbx_comment"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:src="@drawable/ic_chat"/>
-                                    <TextView
-                                        android:id="@+id/tv_number_comment"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="10"
-                                        android:layout_marginLeft="10dp"/>
-                                </LinearLayout>
-
-                            </LinearLayout>
+                                android:textSize="15dp"
+                                android:text="dasdas"/>
 
                         </LinearLayout>
 
@@ -185,57 +140,16 @@
                             android:textSize="18dp"/>
 
                         <TextView
+                            android:id="@+id/tvNoiDungTour"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="20dp"
-                            android:text="- Ngày 1:
-0h: xuất phát từ  TPHCM
-6h check phong + ăn uống
-7h30: tắm biển (chụp hình các kiểu …)
-9h30: tham quan tháp bà pobagar + tắm bùn của người chăm
-11h30: về khách sạn ăn trưa + nghỉ ngơi
-14h: tham quan Viện Hải Dương Học + Nhà Thờ Đá + chùa Long Sơn + thác YangBay
-18h:ăn uống tại Khách Sạn
-19h: tham quan chợ Đêm Nha Trang
+                            android:text="
 "
                             android:textColor="@android:color/black" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
-                            android:textColor="@android:color/black"
-                            android:text="-Ngày 2:
-0h: xuất phát từ  TPHCM
-6h check phong + ăn uống
-7h30: tắm biển (chụp hình các kiểu …)
-9h30: tham quan tháp bà pobagar + tắm bùn của người chăm
-11h30: về khách sạn ăn trưa + nghỉ ngơi
-14h: tham quan Viện Hải Dương Học + Nhà Thờ Đá + chùa Long Sơn + thác YangBay
-18h:ăn uống tại Khách Sạn
-19h: tham quan chợ Đêm Nha Trang
-"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
-                            android:textColor="@android:color/black"
-                            android:text="-Ngày 3:
-0h: xuất phát từ  TPHCM
-6h check phong + ăn uống
-7h30: tắm biển (chụp hình các kiểu …)
-9h30: tham quan tháp bà pobagar + tắm bùn của người chăm
-11h30: về khách sạn ăn trưa + nghỉ ngơi
-14h: tham quan Viện Hải Dương Học + Nhà Thờ Đá + chùa Long Sơn + thác YangBay
-18h:ăn uống tại Khách Sạn
-19h: tham quan chợ Đêm Nha Trang
-"/>
 
                     </LinearLayout>
 
