up date cập nhật thông tin hãng du lịch

--- a/Code Project/DuLichDoDay/app/src/main/res/layout/detail_business_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/detail_business_layout.xml
@@ -43,6 +43,7 @@
                         android:textSize="20dp"/>
 
                     <TextView
+                        android:id="@+id/cancle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="17sp"
