--- a/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_new.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_new.xml
@@ -66,6 +66,7 @@
                 android:gravity="center|left">
 
                 <ImageView
+                    android:id="@+id/chon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
