--- a/Code Project/DuLichDoDay/app/src/main/res/drawable/custom_edt.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/drawable/custom_edt.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp"/>
     <size android:height="20dp" android:width="50dp"/>
-    <solid android:color="@color/txt"/>
+    <solid android:color="@android:color/white"/>
 </shape>
