--- a/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_accept.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_accept.xml
@@ -29,6 +29,7 @@
             android:background="@color/color_main"
             style="@style/linear">
             <TextView
+                android:id="@+id/tvDat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ok"
