--- a/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_home.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/fragment_home.xml
@@ -35,22 +35,10 @@
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
-                    android:textSize="20dp"/>
+                    android:textSize="18dp"/>
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:gravity="center|right">
-
-                <Spinner
-                    android:id="@+id/spinnerHome"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"></Spinner>
-
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -64,15 +52,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@color/color_main"
-                android:gravity="center"
+                android:gravity="center|left"
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/edtSearchHome"
-                    android:layout_width="270dp"
+                    android:id="@+id/edt_search_map"
+                    android:layout_width="250dp"
                     android:paddingTop="2dp"
                     android:paddingBottom="2dp"
                     android:paddingLeft="10dp"
+                    android:singleLine="true"
+                    android:drawableLeft="@drawable/map_search"
+                    android:drawablePadding="10dp"
                     android:paddingRight="10dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -80,10 +71,12 @@
                     android:background="@drawable/custom_edt"/>
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/img_set_gps"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_marginLeft="20dp"
-                    android:src="@drawable/ic_serach"/>
+                    android:src="@drawable/ic_gps_fixed_black_24dp"/>
+
 
             </LinearLayout>
 
