--- a/Code Project/DuLichDoDay/app/src/main/res/layout/tour_list_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/tour_list_layout.xml
@@ -32,25 +32,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Danh sách tour"
+                    android:text="Danh sách tour đặt"
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
                     android:textSize="20dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|right">
-
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/ic_sort"/>
 
             </LinearLayout>
 
@@ -63,7 +49,7 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerViewTour"
+                android:id="@+id/recyclerViewTourDat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
