--- a/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_choosen.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_choosen.xml
@@ -12,6 +12,7 @@
         <LinearLayout
             style="@style/linear">
             <TextView
+                android:id="@+id/btnCamera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_camera"
@@ -26,6 +27,7 @@
             style="@style/linear">
 
             <TextView
+                android:id="@+id/btnGallery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_library"
@@ -41,6 +43,7 @@
             android:layout_height="wrap_content"
             android:background="@color/color_main">
             <TextView
+                android:id="@+id/btnCancel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
