--- a/Code Project/DuLichDoDay/app/src/main/res/layout/password_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/password_layout.xml
@@ -52,20 +52,15 @@
             android:orientation="vertical"
             android:gravity="center">
 
-
             <EditText
-                style="@style/Edittext"
-                android:drawableLeft="@drawable/ic_txt_pass"
-                android:drawablePadding="20dp"
-                android:hint="Mật khẩu cũ"/>
-
-            <EditText
+                android:id="@+id/edtPass"
                 style="@style/Edittext"
                 android:drawableLeft="@drawable/ic_txt_pass"
                 android:drawablePadding="20dp"
                 android:hint="Mật khẩu mới"/>
 
             <EditText
+                android:id="@+id/edtPassMoi"
                 style="@style/Edittext"
                 android:drawableLeft="@drawable/ic_text_again"
                 android:drawablePadding="20dp"
@@ -79,6 +74,7 @@
                 android:gravity="center">
 
                 <TextView
+                    android:id="@+id/btnOk"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -94,6 +90,7 @@
                     android:text="Đồng ý"/>
 
                 <TextView
+                    android:id="@+id/btnHuy"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
