--- a/Code Project/DuLichDoDay/app/src/main/res/layout/password_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/password_layout.xml
@@ -53,17 +53,27 @@
             android:gravity="center">
 
             <EditText
-                android:id="@+id/edtPass"
+                android:id="@+id/txtCurrentPassword"
                 style="@style/Edittext"
                 android:drawableLeft="@drawable/ic_txt_pass"
                 android:drawablePadding="20dp"
+                android:inputType="textPassword"
+                android:hint="Mật khẩu cũ"/>
+
+            <EditText
+                android:id="@+id/txtNewPassword"
+                style="@style/Edittext"
+                android:drawableLeft="@drawable/ic_txt_pass"
+                android:drawablePadding="20dp"
+                android:inputType="textPassword"
                 android:hint="Mật khẩu mới"/>
 
             <EditText
-                android:id="@+id/edtPassMoi"
+                android:id="@+id/txtConfirmNewPassword"
                 style="@style/Edittext"
                 android:drawableLeft="@drawable/ic_text_again"
                 android:drawablePadding="20dp"
+                android:inputType="textPassword"
                 android:hint="Nhập lại mật khẩu mới"/>
 
             <LinearLayout
@@ -74,7 +84,7 @@
                 android:gravity="center">
 
                 <TextView
-                    android:id="@+id/btnOk"
+                    android:id="@+id/btnSave"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -90,7 +100,7 @@
                     android:text="Đồng ý"/>
 
                 <TextView
-                    android:id="@+id/btnHuy"
+                    android:id="@+id/btnCancel"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
