--- a/Code Project/DuLichDoDay/app/src/main/res/layout/dialog__change.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/dialog__change.xml
@@ -1,32 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="140dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.group6.dulichdoday.Dialog_Change">
 
     <TextView
         android:id="@+id/dialog_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:background="@color/colorPrimary"
         android:text="Bạn có muốn duy trì đăng nhập không"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/dialog_info">
+        android:layout_below="@id/dialog_info"
+        android:backgroundTint="@color/colorPrimary">
 
         <Button
             android:id="@+id/dialog_ok"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:background="@color/cardview_dark_background"
             android:layout_weight="0.50"
             android:text="Yes"/>
 
         <Button
             android:id="@+id/dialog_cancel"
             android:layout_width="0dp"
+            android:background="@color/cardview_dark_background"
             android:layout_height="match_parent"
             android:layout_weight="0.50"
             android:text="No"/>
     </LinearLayout>
+
 </RelativeLayout>
