--- a/Code Project/DuLichDoDay/app/src/main/res/values/colors.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6dcca3</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#fdfafb</color>
 
     <color name="color_main">#64be97</color>
     <color name="btn_login">#435154</color>
