--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary"
+    android:padding="0.05dp"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -33,8 +35,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
                 android:orientation="vertical">
 
                 <TextView
