--- a/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/ssssss"
     tools:context="com.example.group6.dulichdoday.DetailTourActivity">
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +33,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Chi tiet tour"
+                    android:text="chi tiết tour "
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
@@ -74,23 +75,34 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/imgDetail"
-                            android:layout_width="150dp"
-                            android:layout_height="150dp"/>
+                        <LinearLayout
+                            android:layout_width="155dp"
+                            android:layout_height="130dp"
+                            android:gravity="center"
+                            android:padding="3dp"
+                            android:background="@android:color/white">
+
+                            <ImageView
+                                android:id="@+id/imgDetail"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />
+
+                        </LinearLayout>
+
+
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
-                            android:paddingTop="5dp"
-                            android:paddingLeft="10dp">
+                            android:paddingTop="15dp"
+                            android:paddingLeft="12dp">
 
                             <TextView
                                 android:id="@+id/tvCodeDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@android:color/black"
+                                android:textColor="@android:color/white"
                                 android:textSize="18dp"
                                 android:textStyle="bold"
                                 android:text="01"/>
@@ -99,7 +111,7 @@
                                 android:id="@+id/tvAddDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@android:color/black"
+                                android:textColor="@android:color/white"
                                 android:textSize="22dp"
                                 android:text="sdasdas"/>
 
@@ -107,16 +119,16 @@
                                 android:id="@+id/tvDesciption"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@android:color/black"
-                                android:textSize="14dp"
+                                android:textColor="@android:color/white"
+                                android:textSize="15dp"
                                 android:text="sdasdas"/>
 
                             <TextView
                                 android:id="@+id/tvPriceDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@android:color/holo_red_dark"
-                                android:textSize="15dp"
+                                android:textColor="@android:color/white"
+                                android:textSize="18dp"
                                 android:text="dasdas"/>
 
                         </LinearLayout>
@@ -126,18 +138,18 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:padding="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/descio_add"
-                            android:drawablePadding="10dp"
+                            android:drawableLeft="@mipmap/medal"
+                            android:drawablePadding="15dp"
                             android:text="Mô tả chi tiết : "
-                            android:textStyle="bold"
-                            android:textColor="@color/color_main"
-                            android:textSize="18dp"/>
+                            android:textColor="@android:color/white"
+                            android:textSize="22dp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tvNoiDungTour"
@@ -146,9 +158,10 @@
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="20dp"
+                            android:textSize="15dp"
                             android:text="
 "
-                            android:textColor="@android:color/black" />
+                            android:textColor="@android:color/white" />
 
 
                     </LinearLayout>
@@ -172,7 +185,7 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:textSize="18dp"
+                android:textSize="20dp"
                 android:text="Đặt tour"/>
 
         </LinearLayout>
